<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
                android:id="@+id/currency"
                android:icon="@drawable/ic_dollar"
                android:title="@string/currency" />
        <item
                android:id="@+id/nbkr"
                android:icon="@drawable/ic_world"
                android:title="@string/nbkr" />
        <!--<item
                android:id="@+id/banks"
                android:icon="@drawable/ic_bank"
                android:title="@string/banks" />-->
        <!--<item
                android:id="@+id/settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/settings" />-->
        <item
                android:id="@+id/info"
                android:icon="@drawable/ic_info"
                android:title="@string/info" />
    </group>
</menu>