<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="@+id/banksList"
            app:layout_constraintEnd_toEndOf="@+id/banksList" android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/banksList" app:layout_constraintTop_toTopOf="@+id/banksList"/>
    <TextView
            android:labelFor="@+id/rgOperation"
            android:text="@string/you_want"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView9"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>

    <RadioGroup
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/rgOperation"
            app:layout_constraintTop_toBottomOf="@+id/textView9" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp">
        <RadioButton
                android:id="@+id/rbBuy"
                android:text="@string/buy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" android:checked="true"/>
        <RadioButton
                android:id="@+id/rbSell"
                android:text="@string/sell"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
    </RadioGroup>
    <TextView
            android:labelFor="@id/spinnerCurrency"
            android:text="@string/currency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView6"
            app:layout_constraintTop_toBottomOf="@+id/rgOperation" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"/>
    <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/spinnerCurrency"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView6"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
    <android.support.v7.widget.RecyclerView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/banksList"
            android:spinnerMode="dropdown"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toBottomOf="@+id/textView10" android:visibility="visible"
            app:layout_constraintVertical_bias="0.0"/>
    <TextView
            android:labelFor="@id/banksList"
            android:text="@string/banks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView10" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@+id/spinnerCurrency"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tvBanksCount" app:layout_constraintStart_toEndOf="@+id/textView10"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintTop_toBottomOf="@+id/spinnerCurrency" android:textStyle="bold"/>
</android.support.constraint.ConstraintLayout>